Fix wrong height

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: 'Inter', sans-serif;
+  min-height: 100vh;
 }
 
 button,
